--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
 /*
   1. Use a more-intuitive box-sizing model.
 */
-*, *::before, *::after {
+*,
+*::before,
+*::after {
   box-sizing: border-box;
 }
 /*
@@ -13,7 +15,8 @@
 /*
   3. Allow percentage-based heights in the application
 */
-html, body {
+html,
+body {
   height: 100%;
 }
 /*
@@ -28,26 +31,90 @@ body {
 /*
   6. Improve media defaults
 */
-img, picture, video, canvas, svg {
+img,
+picture,
+video,
+canvas,
+svg {
   display: block;
   max-width: 100%;
 }
 /*
   7. Remove built-in form typography styles
 */
-input, button, textarea, select {
+input,
+button,
+textarea,
+select {
   font: inherit;
 }
 /*
   8. Avoid text overflows
 */
-p, h1, h2, h3, h4, h5, h6 {
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   overflow-wrap: break-word;
 }
 /*
   9. Create a root stacking context
 */
-#root, #__next {
+#root,
+#__next {
   isolation: isolate;
 }
 
+body{
+  background:rgb(228, 228, 228)
+}
+
+:root {
+  --orange: #db6a2e;
+}
+
+#header{
+  height: 50%;
+  display: flex;
+}
+
+#header-image{
+  width:40%;
+}
+
+h1 {
+  background-color: #565656;
+  font-size: 8em;
+  text-shadow: 2px 2px 3px rgba(255,255,255,0.5);
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  background-clip: text;
+  color: transparent;
+}
+
+#book-display {
+  padding: 0 10% 0 10%;
+  display: grid;
+  grid-template-columns: repeat(4, 15%);
+  gap: 5%;
+  justify-items: center;
+}
+
+.book-card {
+  display: flex;
+  flex-direction: column-reverse;
+  width: 100%;
+  height: 350px;
+  padding: 5%;
+  color: white;
+  background-color: var(--orange);
+  border: 5px solid rgb(66, 66, 66);
+}
+
+.card-book-title {
+  font-size: 1.5em;
+  font-weight: bold;
+}
