--- a/style.css
+++ b/style.css
@@ -68,27 +68,28 @@ h6 {
   isolation: isolate;
 }
 
-body{
-  background:rgb(228, 228, 228)
+body {
+  background: rgb(228, 228, 228);
 }
 
 :root {
   --orange: #db6a2e;
+  color: white;
 }
 
-#header{
+#header {
   height: 50%;
   display: flex;
 }
 
-#header-image{
-  width:40%;
+#header-image {
+  width: 40%;
 }
 
 h1 {
   background-color: #565656;
   font-size: 8em;
-  text-shadow: 2px 2px 3px rgba(255,255,255,0.5);
+  text-shadow: 2px 2px 3px rgba(255, 255, 255, 0.5);
   -webkit-background-clip: text;
   -moz-background-clip: text;
   background-clip: text;
@@ -103,15 +104,80 @@ h1 {
   justify-items: center;
 }
 
-.book-card {
+.book-card,
+#book-openAddToLibraryModal {
   display: flex;
   flex-direction: column-reverse;
   width: 100%;
   height: 350px;
   padding: 5%;
-  color: white;
   background-color: var(--orange);
   border: 5px solid rgb(66, 66, 66);
+}
+
+#modal {
+  display: none;
+  place-items: center;
+
+  background-color: rgba(0, 0, 0, 0.699);
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  position: fixed;
+}
+
+#AddToLibraryWrapper {
+  padding: 1%;
+  display: flex;
+  flex-direction: column;
+  width: 30%;
+  background-color: var(--orange);
+  box-shadow: 5px 5px 20px #db6a2e;
+}
+
+#AddToLibraryWrapper span {
+  font-size: 2em;
+  font-weight: bold;
+  display: inline;
+  align-self: flex-end;
+  cursor: pointer;
+}
+
+#AddToLibraryWrapper * {
+  margin-bottom: 1em;
+}
+
+#AddToLibraryWrapper button {
+  background: #fbca1f;
+  font-family: inherit;
+  padding: 0.6em 1.3em;
+  font-weight: 900;
+  font-size: 18px;
+  border: 3px solid black;
+  border-radius: 0.4em;
+  box-shadow: 0.1em 0.1em;
+}
+
+#AddToLibraryWrapper button:hover {
+  transform: translate(-0.05em, -0.05em);
+  box-shadow: 0.15em 0.15em;
+}
+
+#AddToLibraryWrapper button:active {
+  transform: translate(0.05em, 0.05em);
+  box-shadow: 0.05em 0.05em;
+}
+
+#book-openAddToLibraryModal{
+  display: grid;
+  place-items: center;
+  font-size: 8em;
+}
+
+#book-openAddToLibraryModal:hover {
+  background-color: #fa7934;
+  cursor: pointer;
 }
 
 .card-book-title {
