--- a/style.css
+++ b/style.css
@@ -155,6 +155,13 @@ h1::after {
   height: 25em;
 }
 
+.book-card-cover-wrapper{
+  /* position: inherit; */
+  display: block;
+  width: 100%;
+  height: 90%;
+}
+
 .book-card-cover,
 #book-openAddToLibraryModal {
   position: relative;
@@ -162,7 +169,7 @@ h1::after {
   flex-direction: column;
   justify-content: flex-end;
   width: 100%;
-  height: 90%;
+  height: 100%;
   padding: 5%;
   background-color: var(--orange);
   border: 5px solid rgb(66, 66, 66);
@@ -174,18 +181,28 @@ h1::after {
     rgba(209, 209, 209, 1) 12px 9px, var(--dark-grey) -1px 1px,
     var(--dark-grey) 2px 2px, var(--dark-grey) 3px 3px, var(--dark-grey) 4px 4px,
     var(--dark-grey) 5px 5px, var(--dark-grey) 6px 6px, var(--dark-grey) 7px 7px,
-    var(--dark-grey) 8px 9px, var(--dark-grey) 9px 10px,
-    var(--dark-grey) 10px 11px, var(--dark-grey) 11px 12px,
-    var(--dark-grey) 13px 13px, var(--dark-grey) 14px 13px;
+    var(--dark-grey) 8px 9px, var(--dark-grey) 9px 10px;
+  /* var(--dark-grey) 10px 11px, var(--dark-grey) 11px 12px,
+    var(--dark-grey) 13px 13px, var(--dark-grey) 14px 13px; */
   transition: ease-out 0.1s;
 }
 
-.book-card-cover:hover,
-#book-openAddToLibraryModal:hover {
+.book-card-cover-wrapper:hover .book-card-cover,
+.book-card-cover-wrapper:hover #book-openAddToLibraryModal {
   border-radius: 70px 5px 225px 2px/15px 155px 15px 15px;
-  width: 99%;
-  padding-right: 4%;
 }
+
+.book-card-cover-wrapper:hover{
+  
+  /* width: 99%; */
+  transform:translateY(-0.2em) /* translateX(-1%) scaleX(99%) */;
+  /* padding-right: 4%; */
+}
+
+/* .book-card-cover-wrapper:hover .book-card-cover{
+  transform:perspective(1em)
+} */
+
 
 #book-openAddToLibraryModal {
   background-color: var(--light);
@@ -202,45 +219,57 @@ h1::after {
   cursor: pointer;
 }
 
-/* .book-card-cover::before,
-#book-openAddToLibraryModal::before {
+/* .book-card-cover::before {
   content: "";
-  display: block;
+  display: none;
   justify-self: flex-start;
   align-self: flex-start;
   position: absolute;
-  transform:rotateZ(-45deg) skewY(45deg);
-  background-color: transparent;
-  border-left: rgb(66, 66, 66) solid 2px;
-  width: 70%;
-  height: 5%;
-  bottom: -17px;
-  margin-left: 10%;
-  z-index: 1;
+  width: 105%;
+  height: 105%;
+  background-image: linear-gradient(
+    45deg,
+    transparent 45%,
+    var(--dark-grey) 45%,
+    var(--dark-grey) 55%,
+    transparent 0
+  );
+  background-size: 0.05em 0.05em;
+  top: 0.03em;
+  left: 0.07em;
+  z-index: -4;
+}
+
+.book-card-cover-wrapper:hover .book-card-cover::before {
+  display: block;
 } */
 
-/* .book-card-cover::after,
-#book-openAddToLibraryModal::after {
-  display: none;
+.book-card-cover::after {
   content: "";
   position: absolute;
-  transform: scaleY(45deg);
   width: 100%;
-  height: 103%;
-  top: 3%;
-  left: 5%;
-  z-index: -1;
-  background-color: rgba(187, 187, 187, 0.733);
-  background-image: repeating-linear-gradient(
+  height: 100%;
+  top: 0%;
+  left: 0%;
+  z-index: -2;
+  /* background-image: repeating-linear-gradient(
     45deg,
     var(--dark-grey) 1px,
     transparent 2px,
     transparent 6px
-  );
-  border: rgb(66, 66, 66) solid 4px;
-  border-left:rgba(187, 187, 187, 0.733);
-  border-radius: 95px 5px 2px 4px/15px 225px 15px 5px;
-} */
+  ); */
+  border: 5px solid transparent;
+  border-radius: 70px 5px 20px 2px/15px 225px 5px 15px;
+  box-shadow: var(--dark-grey) 6px 17px,var(--dark-grey) 20px 14px,var(--dark-grey) 20px 16px,
+  var(--dark-grey) 21px 17px,
+  rgba(0, 0, 0, 0.158) 21px 17px 20px;
+}
+
+.book-card-cover-wrapper:hover .book-card-cover::after{
+  box-shadow: var(--dark-grey) 6px 17px,var(--dark-grey) 20px 14px,var(--dark-grey) 20px 16px,
+  var(--dark-grey) 21px 17px,
+  rgba(0, 0, 0, 0.253) 25px 20px 20px;
+}
 
 .book-card-title {
   font-size: 1.5em;
@@ -301,11 +330,11 @@ h1::after {
 .book-card-totalPages {
 }
 
-.book-card:nth-child(2n+3) .book-card-cover{
+.book-card:nth-child(2n + 3) .book-card-cover {
   background-color: var(--dark-grey);
 }
 
-.book-card:nth-child(3n+4) .book-card-cover {
+.book-card:nth-child(3n + 4) .book-card-cover {
   color: var(--dark-grey);
   background: repeating-linear-gradient(
       90deg,
